--- a/web/tmpl/Groups.tmpl
+++ b/web/tmpl/Groups.tmpl
@@ -23,7 +23,7 @@ function input_focus(div_id) {
 	$('#'+div_id).val("").css({fontStyle: "normal"});
 }
 
-//Filters Rows for search_text - Case sensitive as of now, and searches hidden columns...
+/*
 function filter_rows (search_text){
 	if(!search_text) { $("#group_table_body tr:hidden").show(0);}
 	else if (search_text.length >= 3) {
@@ -32,6 +32,59 @@ function filter_rows (search_text){
 		else { $("#group_table_body tr:icontains('"+search_text+"')").hide(); }
 	}
 	$('#filter_count').html('Showing ' + $("#group_table_body tr:visible").length + ' of ' + $("#group_table_body tr").length + ' groups');
+}
+*/
+function filter_rows (search_text) { // fast filter search
+	var visible = 0;
+	var total = 0;
+	
+	if (search_text && search_text.length < 3) { //>
+		return;
+	}
+	
+	//filter_busy(1);
+	
+	if (!search_text) { 
+		$("#group_table_body tr").each(
+			function(index, element) {
+				total++;
+				visible++;
+				$(element).show();
+			}
+		);
+	}
+	else {
+		search_text = search_text.toLowerCase();
+		
+		$("#group_table_body tr").each(
+			function(index, element) {
+				total++;
+				
+				if (element.innerHTML.toLowerCase().indexOf(search_text) != -1) { // match
+					if ( $('#search_type').val() == 1 ) { 
+						$(element).show();
+						visible++;
+					}
+					else {
+						$(element).hide();
+					}
+				}
+				else { // mismatch
+					if ( $('#search_type').val() == 1 ) { 
+						$(element).hide();
+					}
+					else {
+						$(element).show();
+						visible++;				
+					}
+				}
+			}
+		);
+	}
+	
+	set_table();
+	//filter_busy(0);
+	$('#filter_count').html('Showing ' + visible + ' of ' + total + ' rows');
 }
 
 function run_get_groups_for_user(opts){
@@ -132,12 +185,14 @@ Are you sure you want to permanently delete this group?<p>
 <TMPL_IF NAME=GROUP_TABLE>
 <SCRIPT language="JavaScript">
 $(document).ready(function(){
+	/*
 	// Create new case-insensitive "contains" selector function in jQuery
 	jQuery.expr[":"].icontains = jQuery.expr.createPseudo(function(arg) {
 	    return function( elem ) {
 	        return jQuery(elem).text().toUpperCase().indexOf(arg.toUpperCase()) >= 0;
 	    };
 	});
+	*/
 
 	// Setup filter input
 	$("#search_bar").keyup( function() { filter_rows( $(this).val() ); });
