added a link to instructions for getting a coGe account if a user is not logged in

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -130,7 +130,7 @@ $(document).ready( function() {
      <TMPL_IF NAME=LOGON>
       <span class="small">You are logged-in as <b><TMPL_VAR NAME=USER></b> - <a href="index.pl?logout=1" class="small"><b>Sign-out</b></a></span>
 	 <TMPL_ELSE>
-	  <span class="small">Welcome! You are not logged-in ... <a href="javascript:void(0)" onClick="login_cas();return true;" class="small"><b>Sign-in</b></a></span>
+	  <span class="small">Welcome! You are not logged-in ... <a href="javascript:void(0)" onClick="login_cas();return true;" class="small"><b>Sign-in.</b></a> <a href="http://genomevolution.org/wiki/index.php/How_to_get_a_CoGe_account" target=_login_info><br>(Get a CoGe account)</a></span>
      </TMPL_IF>
 	</span>
  
