--- a/web/tmpl/widgets/FileSelect.tmpl
+++ b/web/tmpl/widgets/FileSelect.tmpl
@@ -132,8 +132,8 @@ function activate_on_input(input_id, button_id) {
 
 function irods_get_path (path) {
 	$('#ids_loading').hide();
-	$('#ids_table').html('<tr><td colspan="3" style="white-space:nowrap;"><i>Under Construction</i></td></tr>');
-	return;
+	//$('#ids_table').html('<tr><td colspan="3" style="white-space:nowrap;"><i>Under Construction</i></td></tr>');
+	//return;
 
 	$.ajax({
 		data: {
