--- a/web/tmpl/widgets/FileSelect.tmpl
+++ b/web/tmpl/widgets/FileSelect.tmpl
@@ -29,10 +29,16 @@ function get_selected_files() {
 // End Widget API -------------------------------------------------------------
 
 $(document).ready(function() {
-	$(function() { $("#tabs").tabs({selected:<TMPL_VAR NAME='DEFAULT_TAB'>}); });
+	//FIXME this function is firing twice, not sure why - tempfix is mutex
+	if (typeof alreadyDone != 'undefined') {
+		return;
+	}
+	alreadyDone = 1;
+	
+	$("#tabs").tabs({selected:<TMPL_VAR NAME='DEFAULT_TAB'>});
 	
 	irods_get_path();
-	
+
 	set_ftp_button();
 	$('#input_url').bind('keyup focus click', set_ftp_button);
 	
@@ -146,7 +152,11 @@ function irods_get_path (path) {
 			$('#ids_loading').hide();
 			
 			var result = jQuery.parseJSON(data);
-			if (!result || !result.items) {
+			if (!result || !result.items || result.items.length == 0) {
+				return;
+			}
+			if (result.items[0].type == 'error') {
+				$('#ids_table').html('<tr><td>'+result.items[0].name+'</td></tr>');
 				return;
 			}
 			if (result.items.length > <TMPL_VAR NAME='MAX_IRODS_LIST_FILES'>) {
@@ -156,13 +166,14 @@ function irods_get_path (path) {
 			
 			$('#ids_table').html('');
 			var parent_path = result.path.split('/').slice(0,-2).join('/') + '/';
-			var up_icon  = "<span class='link' style='padding-left:15px;' onclick='irods_get_path(\""+parent_path+"\")'>Go Up<span class='ui-icon ui-icon-arrowreturnthick-1-n' /></span>";
+			var up_icon  = "<span class='link' style='padding-left:15px;' onclick='irods_get_path(\""+parent_path+"\")'><span class='ui-icon ui-icon-arrowreturnthick-1-n'/>Go Up</span>";
+			var refresh_icon  = "<span class='link' style='padding-left:15px;' onclick='irods_get_path(\""+result.path+"\")'><span class='ui-icon ui-icon-refresh'/>Refresh</span>";
 			var get_icon = '';
 			<TMPL_UNLESS NAME='DISABLE_IRODS_GET_ALL'>
-			get_icon = "<span class='link' style='padding-left:15px;' onclick='irods_get_all_files(\""+result.path+"\")'>Get All<span class='ui-icon ui-icon-transferthick-e-w' /></span>";
+			get_icon = "<span class='link' style='padding-left:15px;' onclick='irods_get_all_files(\""+result.path+"\")'><span class='ui-icon ui-icon-transferthick-e-w' />Get All</span>";
 			</TMPL_UNLESS>
 			
-			$('#ids_table').append('<tr><td colspan="3" style="white-space:nowrap;">'+result.path+up_icon+get_icon+'</td></tr>');
+			$('#ids_table').append('<tr><td colspan="3" style="white-space:nowrap;">'+result.path+up_icon+refresh_icon+get_icon+'</td></tr>');
 			
 			result.items.forEach(
 				function(obj) {
