--- a/web/tmpl/widgets/FileSelect.tmpl
+++ b/web/tmpl/widgets/FileSelect.tmpl
@@ -152,28 +152,31 @@ function irods_get_path (path) {
 			$('#ids_loading').hide();
 			
 			var result = jQuery.parseJSON(data);
-			if (!result || !result.items || result.items.length == 0) {
+			if (result == null) {
 				return;
 			}
-			if (result.items[0].type == 'error') {
-				$('#ids_table').html('<tr><td>'+result.items[0].name+'</td></tr>');
-				return;
+			if (result) {
+				if (result.items[0] && result.items[0].type == 'error') {
+					$('#ids_table').html('<tr><td>'+result.items[0].name+'</td></tr>');
+					return;
+				}
+				if (result.items.length > <TMPL_VAR NAME='MAX_IRODS_LIST_FILES'>) {
+					alert("Too many files (" + filelist.length + ") at specified location, limit is <TMPL_VAR NAME='MAX_IRODS_LIST_FILES'>.");
+					return;
+				}
 			}
-			if (result.items.length > <TMPL_VAR NAME='MAX_IRODS_LIST_FILES'>) {
-				alert("Too many files (" + filelist.length + ") at specified location, limit is <TMPL_VAR NAME='MAX_IRODS_LIST_FILES'>.");
-				return;
-			}
-			
+
 			$('#ids_table').html('');
 			var parent_path = result.path.split('/').slice(0,-2).join('/') + '/';
-			var up_icon  = "<span class='link' style='padding-left:15px;' onclick='irods_get_path(\""+parent_path+"\")'><span class='ui-icon ui-icon-arrowreturnthick-1-n'/>Go Up</span>";
+			var up_icon  = "<span class='link' onclick='irods_get_path(\""+parent_path+"\")'><span class='ui-icon ui-icon-arrowreturnthick-1-n'/>Go Up</span>";
 			var refresh_icon  = "<span class='link' style='padding-left:15px;' onclick='irods_get_path(\""+result.path+"\")'><span class='ui-icon ui-icon-refresh'/>Refresh</span>";
+			var home_icon  = "<span class='link' style='padding-left:15px;' onclick='irods_get_path()'><span class='ui-icon ui-icon-home'/>Home</span>";
 			var get_icon = '';
 			<TMPL_UNLESS NAME='DISABLE_IRODS_GET_ALL'>
-			get_icon = "<span class='link' style='padding-left:15px;' onclick='irods_get_all_files(\""+result.path+"\")'><span class='ui-icon ui-icon-transferthick-e-w' />Get All</span>";
+			get_icon = "<span class='link' style='padding-left:15px;' onclick='irods_get_all_files(\""+result.path+"\")'><span class='ui-icon ui-icon-transferthick-e-w' />Get All Files</span>";
 			</TMPL_UNLESS>
 			
-			$('#ids_table').append('<tr><td colspan="3" style="white-space:nowrap;">'+result.path+up_icon+refresh_icon+get_icon+'</td></tr>');
+			$('#ids_table').append('<tr><td colspan="3" style="white-space:nowrap;border-bottom-style: solid; border-bottom-width: thin;">'+up_icon+refresh_icon+home_icon+get_icon+'</td></tr>').append('<tr><td colspan="3" style="white-space:nowrap;font-weight:bold;">'+result.path+'</td></tr>');
 			
 			result.items.forEach(
 				function(obj) {
