--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -905,8 +905,8 @@ function rand ()
   <TD>Filter query sequence (DUST/SEG) (-F): </TD>
   <TD>
     <select  name="blast_filter" id="blast_filter" tabindex="1" >
-     <option value="T" >Yes</option>
-     <option value="F" selected>No</option>
+     <option value="T" <TMPL_VAR NAME="BLAST_FILTER_YES"> >Yes</option>
+     <option value="F" <TMPL_VAR NAME="BLAST_FILTER_NO"> >No</option>
     </select>
   </TD>
  </TR>    
@@ -923,7 +923,7 @@ function rand ()
 
 
  <DIV id="tblastx_options" class="small algo_options" style="display: none">
- <font class="small">Hide HSPs with stop codons in a coding sequence?<label><input  type="radio" name="show_hsps_with_stop_codon" id="show_hsps_with_stop_codon" tabindex="1" value="1" <TMPL_VAR NAME="BLAST_FILTER_YES"> />Yes</label><label><input  type="radio" name="show_hsps_with_stop_codon" id="show_hsps_with_stop_codon" tabindex="1" value="0"   <TMPL_VAR NAME="BLAST_FILTER_NO"> />No</label></font>
+ <font class="small">Hide HSPs with stop codons in a coding sequence?<label><input  type="radio" name="show_hsps_with_stop_codon" id="show_hsps_with_stop_codon" tabindex="1" value="1" <TMPL_VAR NAME="HIDE_STOP_YES"> />Yes</label><label><input  type="radio" name="show_hsps_with_stop_codon" id="show_hsps_with_stop_codon" tabindex="1" value="0"   <TMPL_VAR NAME="HIDE_STOP_NO"> />No</label></font>
 <br>Note: Word size limited to 3 for tblastx
 </DIV> 
 
